# gollem-lob

./: .env.example  .gitignore  Dockerfile  README.md  cloud-architecture-diagram.mermaid  docker-compose.yml  gollem-lob_matcher-service-grpc.mermaid  prometheus.yml
.github/: deploy.yml
.github/workflows/: ci.yml  frontend.yml
frontend/: .env.local.example  Dockerfile  README.md  architecture.mermaid  cypress.config.ts  frontend.todo  jest.config.js  next.config.js  tailwind.config.js  tsconfig.json
frontend/src/components/: authmodal.tsx
frontend/src/components/ui/: error-boundary.tsx  loading.tsx  toast.tsx
frontend/src/features/auth/: AuthProvider.tsx  EmailVerification.tsx  UserProfile.tsx
frontend/src/features/inference/: CostEstimator.tsx  ModelSelector.tsx  PromptInput.tsx  ResponseViewer.tsx
frontend/src/layouts/: DashboardLayout.tsx  MainLayout.tsx
frontend/src/lib/: analytics.ts  api.ts  auth.ts  error-tracking.js  logging.ts  monitoring.ts  stripe.ts
frontend/src/pages/: _app.tsx  confirm.tsx  credits.tsx  dashboard.tsx  history.tsx  index.tsx  settings.tsx  support.tsx
frontend/src/styles/: globals.css
frontend/src/tests/: setupTests.ts  utils.tsx
frontend/src/types/: api.ts
frontend/src/utils/: formatters.ts
lambda/: index.js  matcher.proto  package.json
provider/: Dockerfile  README.md  monitor.py  requirements.txt
rust/: Cargo.toml  build.rs
rust/proto/: matcher.proto
rust/src/: circuit_breaker.rs  latency.rs  main.rs  orderbook.rs  rate_limiter.rs
terraform/: frontend.tf  main.tf  variables.tf
tests/: matcher_test.rs
(+14 files in other folders)
