[package]
name = "gollem-lob"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.30", features = ["serde"] }
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "gollem-lob"
path = "src/main.rs"
